Working version. No event for code wise configuration and no datagen yet.